--- a/template.yaml
+++ b/template.yaml
@@ -84,7 +84,7 @@ spec:
       action: github:actions:dispatch
       input:
         workflowId:  instance.yml # ID of GitHub action WorkFlow
-        repoUrl: 'github.com?repo=aws-ec2&owner=sagar0419'
+        repoUrl: 'github.com?repo=aws-ec2-rhdh&owner=cp1408'
         branchOrTagName: 'master'
         workflowInputs:
           instanceName: ${{ parameters.InstanceName }}
