--- a/component.yaml
+++ b/component.yaml
@@ -3,7 +3,7 @@ kind: Component
 metadata:
   name: ${{ values.name | dump }}
   annotations:
-    github.com/project-slug: sagar0419/aws-ec2 # Change the value to your github repo which contains terraform code.
+    github.com/project-slug: cp1408/aws-ec2-rhdh # Change the value to your github repo which contains terraform code.
     backstage.io/techdocs-ref: dir:.
   title: 'IA for Instance Automation' # you can give any title
   description: An example of a Instance Creation. # Change Description accordingly
